second attempt at basic html edit on index file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
-    <title>My First Web Page</title>
+    <title>My First Web Page
+    	why won't this work?
+
+    </title>
 </head>
 <body>
-    Hello World!
+    Hello World! Jack Dunning 12:35pm
 </body>
 </html>
