I am getting the hang of this

--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
 </head>
 <body>
     Hello World! Jack Dunning 12:35pm
-</body>
-</html>
 
 
-<!-- below this line is copy and pasted code from CodeCamp -->
-
-<script>
-  $(document).ready(function() {
-$("button").addClass("animated bounce");
-  });
-</script>
-
-
+The text below is an examply of how to set up the code for a document such as this:
 <div class="container-fluid">
   <h3 class="text-primary text-center">jQuery Playground</h3>
   <div class="row">
@@ -41,3 +31,17 @@ $("button").addClass("animated bounce");
     </div>
   </div>
 </div>
+
+
+
+
+
+
+</body>
+</html>
+
+
+<!-- below this line is copy and pasted code from CodeCamp -->
+
+
+
