--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Overflow by HTML5 UP</title>
+    <title>jadunning.github.io</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,15 +18,16 @@
     <!-- Header -->
       <section id="header">
         <header>
-          <h1>Overflow</h1>
-          <p>By HTML5 UP</p>
+          <h1>Jack Dunning Founders and Coders Application</h1>
+          <p>14/11/2017</p>
         </header>
         <footer>
-          <a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
+          <a href="#banner" class="button style2 scrolly-middle">My Coding Journey <br> (A timeline of where I learnt to code)</a>
         </footer>
       </section>
 
-    <!-- Banner -->
+
+    <!-- Banner 
       <section id="banner">
         <header>
           <h2>This is Overflow</h2>
@@ -38,28 +39,29 @@
           <a href="#first" class="button style2 scrolly">Act on this message</a>
         </footer>
       </section>
+      -->
 
     <!-- Feature 1 -->
       <article id="first" class="container box style1 right">
-        <a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+        <a href="#" class="image fit"><img src="images/Imperial_College_RSM.jpg" alt="" /></a>
         <div class="inner">
           <header>
-            <h2>Lorem ipsum<br />
-            dolor sit amet</h2>
+            <h2>Imperial College<br />
+            London</h2>
           </header>
-          <p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+          <p>I first learnt python during an introductor first year coding module.</p>
         </div>
       </article>
 
     <!-- Feature 2 -->
       <article class="container box style1 left">
-        <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+        <a href="#" class="image fit"><img src="images/Killer_Whale.jpg" alt="" /></a>
         <div class="inner">
           <header>
-            <h2>Mollis posuere<br />
-            lectus lacus</h2>
+            <h2>University British Columbia<br />
+            Canada</h2>
           </header>
-          <p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+          <p>Self learnt MATLAB at UBC whilst doing... And I took this picture of a killer whale (aren't I such an interesting person).</p>
         </div>
       </article>
 
