--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <title>jadunning.github.io</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=4" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -66,7 +66,7 @@
       </article>
 
       <!-- Feature 3 -->
-      <article class="container box style1 left">
+      <article class="container box style1 right">
         <a href="#" class="image fit"><img src="images/Killer_Whale.jpg" alt="" /></a>
         <div class="inner">
           <header>
