testing the scripts

--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE HTML>
-<!--
-  Overflow by HTML5 UP
-  html5up.net | @ajlkn
-  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
   <head>
     <title>jadunning.github.io</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=4" />
-    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=4" /> <!-- Controls the viewport of the webpage (e.g. how it looks on iphone vs computer) -->
+
+    <link rel="stylesheet" href="assets/css/main.css" /> <!-- A link to an external CSS style sheet -->
+   
   </head>
   <body>
 
@@ -23,11 +19,12 @@
         </header>
         <footer>
           <a href="#banner" class="button style2 scrolly-middle">My Coding Journey <br> (A timeline of where I learnt to code)</a>
+          <!-- line above codes the button -->
         </footer>
       </section>
 
 
-    <!-- Banner 
+    <!-- Banner -->
       <section id="banner">
         <header>
           <h2>This is Overflow</h2>
@@ -39,7 +36,7 @@
           <a href="#first" class="button style2 scrolly">Act on this message</a>
         </footer>
       </section>
-      -->
+      <!-- -->
 
     <!-- Feature 1 -->
       <article id="first" class="container box style1 right">
@@ -142,7 +139,7 @@
     </section>
 
     <!-- Scripts -->
-      <script src="assets/js/jquery.min.js"></script>
+      <!-- <script src="assets/js/jquery.min.js"></script> -->
       <script src="assets/js/jquery.scrolly.min.js"></script>
       <script src="assets/js/jquery.poptrox.min.js"></script>
       <script src="assets/js/skel.min.js"></script>
