updating everything again

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <head>
     <title>jadunning.github.io</title>
     <meta charset="utf-8" /> <!-- character coding = utf-8 -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=4" /> <!-- Controls the viewport of the webpage (e.g. how it looks on iphone vs computer) -->
-
+    <meta name="viewport" content="width=device-width, initial-scale=4" /> <!--Controls the viewport of the webpage (e.g. how it looks on iphone vs computer) -->
     <link rel="stylesheet" href="assets/css/JAD main.css" /> <!-- A link to an external CSS style sheet -->
    
   </head>
