resizing the map element

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     </div>
     -->
 
-    <div id="map" style="width:400px;height:400px;background:yellow"></div>
+    <div id="map" style="width:80%;height:800px;background:yellow"></div>
+
 
 <script>
 function myMap() {
