--- a/index.html
+++ b/index.html
@@ -84,11 +84,7 @@
     </div>
     -->
 
-    <!--<div id="map" style="width:80%;height:800px;background:yellow"></div>-->
-
-    <div id='map' class="container align-center">
-        <div id='map' class="row justify-content-md-center">
-            <div id='map' class="mbr-white col-md-10">
+<div id="map" style="width:80%;margin-left: auto; margin-right: auto;height:800px;background:yellow"></div>
 
 
 <script>
@@ -104,12 +100,6 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbcXKwump-Z9Btd_bsHarB3sCwJ84N_-4&callback=myMap"></script>
 
-
-
-
-            </div>
-        </div>
-    </div>
 
 
 
