--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     -->
 
-<div id="map" style="width:80%;margin-left: auto; margin-right: auto;height:800px;background:yellow"></div>
+<div id="map" style="width:80%;margin-left: auto; margin-right: auto;margin-top: auto; margin-bottom: auto;height:800px;background:yellow"></div>
 
 
 <script>
